# audio-transcription-to-text

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  main.py  package-lock.json  package.json  pyproject.toml  requirements.txt
static/css/: 8bit.css
templates/: result.html  upload.html
utils/: audio.py  files.py
