[project]
name = 'audio to text'
description = 'Web application converting audio files to their textual representation'
version = '0.0.1'
readme = 'README.md'
requires-python = '>=3.11'
dependencies = [
    'Flask==3.0.3',
    'Flask-Uploads==0.2.1',
    'torch==2.3.1',
    'transformers==4.41.2',
    'torchaudio==2.3.1',
    'python-dotenv==1.0.1',
]

[project.optional-dependencies]
dev = [
    'pre-commit~=3.4',
]

[build-system]
requires = ['setuptools~=70.3.0']

[tool.setuptools.packages.find]
where = ["."]
exclude = ["tests*", "node_modules*", "build*"]

[project.urls]
'Homepage' = 'https://github.com/vin-cf/audio-transcription-to-text'