[project]
name = 'audio-to-text'
description = 'Web application converting audio files to their textual representation'
version = '0.0.1'
readme = 'README.md'
requires-python = '>=3.11'
dependencies = [
    'Flask==3.0.3',
    'Flask-Uploads==0.2.1',
    'torch==2.3.1',
    'transformers==4.43.3',
    'torchaudio==2.3.1',
    'python-dotenv==1.0.1',
]

[project.optional-dependencies]
dev = [
    "pre-commit~=3.4",
    "pytest~=8.0",
    "ruff~=0.4.3",
]

[build-system]
requires = ['setuptools~=70.3.0']

[tool.setuptools.packages.find]
where = ["."]
exclude = ["tests*", "node_modules*", "build*"]

[tool.pyright]
venvPath = "."
venv = ".venv"
exclude = ["**/node_modules", "**/__pycache__", "**/.*", "build"]
strictListInference = true
strictDictionaryInference = true
strictParameterNoneValue = true
reportTypedDictNotRequiredAccess = false
reportIncompatibleVariableOverride = true
reportIncompatibleMethodOverride = true
reportMatchNotExhaustive = true
reportUnnecessaryTypeIgnoreComment = true

[tool.ruff]
line-length = 120
# first-party imports for sorting
src = ["."]
fix = true
show-fixes = true

[tool.ruff.lint]
# rules to enable/ignore
select = [
    "F",    # pyflakes
    "E",    # pycodestyle
    "W",    # pycodestyle
    "ANN",  # type annotations
    "N",    # pep8-naming
    "B",    # bugbear
    "I",    # isort
    "ARG",  # flake8-unused-arguments
    "SLF",  # flake8-self
    "UP",   # pyupgrade
    "PERF", # perflint
    "RUF",  # ruff-specific
    "SIM",  # flake8-simplify
    "S113", # request-without-timeout
]

ignore = [
    # allow untyped self and cls args
    "ANN101",
    "ANN102",
    # allow no return type from dunder methods
    "ANN204",
    # allow == True because pandas dataframes overload equality
    "E712",
    # allow fastapi.Depends pattern that occurs when endpoints rely on services
    "B008",
    # ARG001 Unused function argument errors are thrown for the `mock_qdrant_manager` used in the tests
    "ARG001"
]

[tool.ruff.lint.isort]
combine-as-imports = true
force-wrap-aliases = true

[tool.ruff.lint.per-file-ignores]
# test functions don't need return types
"tests/*" = ["ANN201", "ANN202"]

[tool.ruff.lint.flake8-annotations]
# allow *args: Any, **kwargs: Any
allow-star-arg-any = true

[tool.ruff.lint.flake8-bugbear]
# https://github.com/tiangolo/fastapi/discussions/7463
extend-immutable-calls = ["fastapi.Depends", "fastapi.params.Depends", "fastapi.Query", "fastapi.params.Query"]


[project.urls]
'Homepage' = 'https://github.com/vin-cf/audio-transcription-to-text'